@@ -16,6 +16,7 @@ import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.text.ParseException;
 import java.text.SimpleDateFormat;
+import java.util.Arrays;
 import java.util.Date;
 import java.util.List;
 
@@ -41,8 +42,8 @@ public class insertRowServlet extends HttpServlet {
 
         boolean success = false;
 
-        //in base a quale tabella viene scelta viene chiamato un metodo
-        //se il nome della tabella è errato manda un errore
+        // in base a quale tabella viene scelta viene chiamato un metodo
+        // se il nome della tabella è errato manda un errore
         switch (nameTable) {
             case "utente" ->
                 success = insertUtente(req);
@@ -59,13 +60,13 @@ public class insertRowServlet extends HttpServlet {
             case "confezione" ->
                 success = insertConfezione(req);
 
-            default ->{
+            default -> {
                 resp.sendError(HttpServletResponse.SC_BAD_REQUEST, "Invalid table name.");
                 return;
             }
         }
 
-        //se ha funzionato tutto correttamente mostra la tabella
+        // se ha funzionato tutto correttamente mostra la tabella
         if (success) {
             req.getRequestDispatcher("showTable?tableName=" + nameTable).forward(req, resp);
         } else {
@@ -73,8 +74,7 @@ public class insertRowServlet extends HttpServlet {
         }
     }
 
-
-    //Controlla se i parametri sono validi
+    // Controlla se i parametri sono validi
     private boolean isValid(List<String> params) {
         for (String param : params) {
             if (param == null || param.isBlank()) {
@@ -84,10 +84,9 @@ public class insertRowServlet extends HttpServlet {
         return true;
     }
 
-
-    //prende i parametri dalla request,controlla che siano validi,
-    //crea un oggetto Utente avente quei parametri e poi tramite il DAO
-    //salva il nuovo Utente nel database tramite metodo DAO
+    // prende i parametri dalla request,controlla che siano validi,
+    // crea un oggetto Utente avente quei parametri e poi tramite il DAO
+    // salva il nuovo Utente nel database tramite metodo DAO
     private boolean insertUtente(HttpServletRequest req) {
         String email = req.getParameter("email");
         String password = req.getParameter("password");
@@ -98,7 +97,7 @@ public class insertRowServlet extends HttpServlet {
         String indirizzo = req.getParameter("indirizzo");
         String telefono = req.getParameter("telefono");
 
-        if (isValid(List.of(email, password, nome, cognome, codiceFiscale, dataDiNascita, indirizzo, telefono))) {
+        if (isValid(Arrays.asList(email, password, nome, cognome, codiceFiscale, dataDiNascita, indirizzo, telefono))) {
             Utente u = new Utente();
             u.setEmail(email);
             u.setPassword(password);
@@ -126,10 +125,9 @@ public class insertRowServlet extends HttpServlet {
         return false;
     }
 
-
-    //prende i parametri dalla request,controlla che siano validi,
-    //crea un oggetto Prodotto avente quei parametri e poi tramite il DAO
-    //salva il nuovo Prodotto nel database tramite metodo DAO
+    // prende i parametri dalla request,controlla che siano validi,
+    // crea un oggetto Prodotto avente quei parametri e poi tramite il DAO
+    // salva il nuovo Prodotto nel database tramite metodo DAO
     private boolean insertProdotto(HttpServletRequest req) throws IOException, ServletException {
         String idProdotto = req.getParameter("idProdotto");
         String nome = req.getParameter("nome");
@@ -137,11 +135,12 @@ public class insertRowServlet extends HttpServlet {
         String categoria = req.getParameter("categoria");
         Part filePart = req.getPart("immagine");
 
-        if (filePart == null || filePart.getSize() == 0 || filePart.getSubmittedFileName() == null || filePart.getSubmittedFileName().isBlank()) {
+        if (filePart == null || filePart.getSize() == 0 || filePart.getSubmittedFileName() == null
+                || filePart.getSubmittedFileName().isBlank()) {
             // Se il file non è stato inviato o è vuoto, non possiamo inserire il prodotto
             return false;
         }
-        //Per l'immagine
+        // Per l'immagine
         String fileName = Paths.get(filePart.getSubmittedFileName()).getFileName().toString();
         String destinazione = CARTELLA_UPLOAD + "/" + fileName;
         Path pathDestinazione = Paths.get(getServletContext().getRealPath(destinazione));
@@ -160,30 +159,33 @@ public class insertRowServlet extends HttpServlet {
         String proteine = req.getParameter("proteine");
         String grassi = req.getParameter("grassi");
 
-        if (isValid(List.of(idProdotto, nome, descrizione, categoria, calorie, carboidrati, proteine, grassi))) {
-            Prodotto p = new Prodotto();
-            p.setIdProdotto(idProdotto);
-            p.setNome(nome);
-            p.setDescrizione(descrizione);
-            p.setCategoria(categoria);
-            p.setImmagine(destinazione);
-            p.setCalorie(Integer.parseInt(calorie));
-            p.setCarboidrati(Integer.parseInt(carboidrati));
-            p.setProteine(Integer.parseInt(proteine));
-            p.setGrassi(Integer.parseInt(grassi));
+        if (isValid(Arrays.asList(idProdotto, nome, descrizione, categoria, calorie, carboidrati, proteine, grassi))) {
+            try {
+                Prodotto p = new Prodotto();
+                p.setIdProdotto(idProdotto);
+                p.setNome(nome);
+                p.setDescrizione(descrizione);
+                p.setCategoria(categoria);
+                p.setImmagine(destinazione);
+                p.setCalorie(Integer.parseInt(calorie));
+                p.setCarboidrati(Integer.parseInt(carboidrati));
+                p.setProteine(Integer.parseInt(proteine));
+                p.setGrassi(Integer.parseInt(grassi));
 
-            ProdottoDAO prodottoDAO = new ProdottoDAO();
-            prodottoDAO.doSave(p);
-            return true;
+                ProdottoDAO prodottoDAO = new ProdottoDAO();
+                prodottoDAO.doSave(p);
+                return true;
+            } catch (NumberFormatException e) {
+                e.printStackTrace();
+                return false;
+            }
         }
         return false;
     }
 
-
-
-    //prende i parametri dalla request,controlla che siano validi,
-    //crea un oggetto Variante avente quei parametri e poi tramite il DAO
-    //salva il nuovo Variante nel database tramite metodo DAO
+    // prende i parametri dalla request,controlla che siano validi,
+    // crea un oggetto Variante avente quei parametri e poi tramite il DAO
+    // salva il nuovo Variante nel database tramite metodo DAO
     private boolean insertVariante(HttpServletRequest req) {
         String idProdottoVariante = req.getParameter("idProdottoVariante");
         String idGusto = req.getParameter("idGusto");
@@ -193,7 +195,7 @@ public class insertRowServlet extends HttpServlet {
         String sconto = req.getParameter("sconto");
         String evidenza = req.getParameter("evidenza");
 
-        if (isValid(List.of(idProdottoVariante, idGusto, idConfezione, prezzo, quantity, sconto))) {
+        if (isValid(Arrays.asList(idProdottoVariante, idGusto, idConfezione, prezzo, quantity, sconto))) {
 
             try {
                 float price = Float.parseFloat(prezzo);
@@ -207,18 +209,18 @@ public class insertRowServlet extends HttpServlet {
                 if (price <= 0 || q <= 0 || discount < 0 || discount > 100) {
                     return false; // Dati non validi (es. prezzo negativo)
                 }
-                    Variante v = new Variante();
-                    v.setIdProdotto(idProdottoVariante);
-                    v.setIdGusto(Integer.parseInt(idGusto));
-                    v.setIdConfezione(Integer.parseInt(idConfezione));
-                    v.setPrezzo(price);
-                    v.setQuantita(q);
-                    v.setSconto(discount);
-                    v.setEvidenza(evidence);
+                Variante v = new Variante();
+                v.setIdProdotto(idProdottoVariante);
+                v.setIdGusto(Integer.parseInt(idGusto));
+                v.setIdConfezione(Integer.parseInt(idConfezione));
+                v.setPrezzo(price);
+                v.setQuantita(q);
+                v.setSconto(discount);
+                v.setEvidenza(evidence);
 
-                    VarianteDAO varianteDAO = new VarianteDAO();
-                    varianteDAO.doSaveVariante(v);
-                    return true;
+                VarianteDAO varianteDAO = new VarianteDAO();
+                varianteDAO.doSaveVariante(v);
+                return true;
 
             } catch (NumberFormatException e) {
                 // Se un parametro non è un numero, cattura l'errore
@@ -229,10 +231,9 @@ public class insertRowServlet extends HttpServlet {
         return false;
     }
 
-
-    //prende i parametri dalla request,controlla che siano validi,
-    //crea un oggetto Ordine avente quei parametri e poi tramite il DAO
-    //salva il nuovo Ordine nel database tramite metodo DAO
+    // prende i parametri dalla request,controlla che siano validi,
+    // crea un oggetto Ordine avente quei parametri e poi tramite il DAO
+    // salva il nuovo Ordine nel database tramite metodo DAO
     private boolean insertOrdine(HttpServletRequest req) {
         String emailUtente = req.getParameter("emailUtente");
         String stato = req.getParameter("stato");
@@ -244,8 +245,13 @@ public class insertRowServlet extends HttpServlet {
             ordine.setEmailUtente(emailUtente);
             ordine.setStato(stato);
 
-            if (totale != null && !totale.isBlank() && Float.parseFloat(totale) >= 0) {
-                ordine.setTotale(Float.parseFloat(totale));
+            try {
+                if (totale != null && !totale.isBlank() && Float.parseFloat(totale) >= 0) {
+                    ordine.setTotale(Float.parseFloat(totale));
+                }
+            } catch (NumberFormatException e) {
+                e.printStackTrace();
+                return false;
             }
 
             if (dataStr != null && !dataStr.isBlank()) {
@@ -266,17 +272,16 @@ public class insertRowServlet extends HttpServlet {
         return false;
     }
 
-
-    //prende i parametri dalla request,controlla che siano validi,
-    //crea un oggetto DettaglioOrdine avente quei parametri e poi tramite il DAO
-    //salva il nuovo DettaglioOrdine nel database tramite metodo DAO
+    // prende i parametri dalla request,controlla che siano validi,
+    // crea un oggetto DettaglioOrdine avente quei parametri e poi tramite il DAO
+    // salva il nuovo DettaglioOrdine nel database tramite metodo DAO
     private boolean insertDettaglioOrdine(HttpServletRequest req) {
         String idOrdine = req.getParameter("idOrdine");
         String idProdotto = req.getParameter("idProdotto");
         String idVariante = req.getParameter("idVariante");
         String quantity = req.getParameter("quantity");
 
-        if (isValid(List.of(idOrdine, idProdotto, idVariante, quantity))) {
+        if (isValid(Arrays.asList(idOrdine, idProdotto, idVariante, quantity))) {
             try {
                 int q = Integer.parseInt(quantity);
 
@@ -301,10 +306,9 @@ public class insertRowServlet extends HttpServlet {
         return false;
     }
 
-
-    //prende i parametri dalla request,controlla che siano validi,
-    //crea un oggetto Gusto avente quei parametri e poi tramite il DAO
-    //salva il nuovo Gusto nel database tramite metodo DAO
+    // prende i parametri dalla request,controlla che siano validi,
+    // crea un oggetto Gusto avente quei parametri e poi tramite il DAO
+    // salva il nuovo Gusto nel database tramite metodo DAO
     private boolean insertGusto(HttpServletRequest req) {
         String nomeGusto = req.getParameter("nomeGusto");
 
@@ -319,10 +323,9 @@ public class insertRowServlet extends HttpServlet {
         return false;
     }
 
-
-    //prende i parametri dalla request,controlla che siano validi,
-    //crea un oggetto Confezione avente quei parametri e poi tramite il DAO
-    //salva la nuova Confezione nel database tramite metodo DAO
+    // prende i parametri dalla request,controlla che siano validi,
+    // crea un oggetto Confezione avente quei parametri e poi tramite il DAO
+    // salva la nuova Confezione nel database tramite metodo DAO
     private boolean insertConfezione(HttpServletRequest req) {
         try {
             String peso = req.getParameter("pesoConfezione");
